# MLOps_CLI_Summarization

./: README.md  pyproject.toml
examples/: mlops-wikipedia.txt
summarize/: main.py
